# Sloveya26

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnomalyScatterPlot.tsx  BinaryInspector.tsx  DiagnosticDashboard.tsx  EntropyVisualizer.tsx
frontend/src/hooks/: useDiagnosticJob.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: diagnostic.ts
functions/api/: analyzeCompany.ts  analyzeFile.ts  analyzeMessage.ts  analyzeURL.ts  utils.ts
solveya/api/: __init__.py  dependencies.py  main.py  models.py
solveya/api/routes/: anomalies.py  diagnostics.py  health.py  telemetry.py
solveya/core/: __init__.py  binary_parser.py  entropy.py  isolation_forest.py  lof.py  types.py
solveya/services/: __init__.py  health.py  orchestrator.py  pipeline.py
src/components/analyzer/: ResultDashboard.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/lib/: analyzer-service.ts  types.ts
src/pages/: Pricing.tsx
