[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solveya"
version = "0.1.0"
description = "Solveya Cyber-Physical Diagnostic Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "JULES", email = "jules@solveya.internal" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "psutil>=5.9.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "structlog>=24.1.0"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
